--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 # Set the port for the application
 server.port = 8095
+spring.main.allow-circular-references=true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=dev.cosmus@gmail.com
+spring.mail.password=vspkoanheiixvavw
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
 
