--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.main.allow-circular-references=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=dev.cosmus@gmail.com
-spring.mail.password=vspkoanheiixvavw
+spring.mail.username= your gmail account
+spring.mail.password= your gmail password
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
